--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Replace the header contents:
     <header>          
       <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Tristen Taylor Werner's Site</h1>
-      <h3>An Instruction Challenge for JOUR108</h3>
+      <h3>A bit of Matter and a Little bit More</h3>
 
     </header>
 
