--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://live.staticflickr.com/65535/51119613491_0469b50556_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://live.staticflickr.com/65535/51119613491_0469b50556_o.png" width="100" align="left" height="100" alt="KH_monogram">            
       <h1>Tristen Taylor Werner's Site</h1>
       <h3>A bit of Matter and a Little bit More</h3>
 
