--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
+              <li>pasta of choice</li>
               <li>Cardboard</li>
               <li>Hand pump (bicycle)</li>
               <li>Cork (vintage wines)</li>
