--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ Replace the header contents:
 
     <header>          
       <img src="https://live.staticflickr.com/65535/51119613491_0469b50556_o.png" width="100" align="left" height="100" alt="KH_monogram">            
-      <h1>Tristen Taylor Werner's Site</h1>
-      <h3>A bit of Matter and a Little bit More</h3>
+      <h1>How to with Tristen Taylor W</h1>
+      <h3>Simple meal or snack edition</h3>
 
     </header>
 
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to make an avocado toast</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 15 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly time:</b> 5 minutes<br>
+              <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you spending too much at your local coffee shop? Want to know how your snack can still be Instagram worthy at home? Learn how to make your own avocado toast with this simple and delicious recipe! </p>
 
           </div>
 
