--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an avocado toast</h1>
+            <h1>How to make avocado toast</h1>
 
             <hr>
             <p><b>Assembly time:</b> 5 minutes<br>
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>pasta of choice</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Bread of your choice - 1 slice </li>
+              <li>Ripe avocado - 1/2 </li>
+              <li>Salt and pepper</li>
+              <li>Optional: garlic, onion, tomatoes</li>
+              <li>Optional: red perpper flakes, balsamic dressing</li>
+              <li>Toaster and utensils</li>
             </ul>
           </aside>
         </div>
