--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ Add your Things You'll Need.
               <li>Bread of your choice - 1 slice </li>
               <li>Ripe avocado - 1/2 </li>
               <li>Salt and pepper</li>
-              <li>Optional: garlic, onion, tomatoes</li>
-              <li>Optional: red perpper flakes, balsamic dressing</li>
               <li>Toaster and utensils</li>
+              <li>Optional: garlic, onion, tomatoes, etc.</li>
+              <li>Optional: red perpper flakes, balsamic dressing, etc.</li>
             </ul>
           </aside>
         </div>
