--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Toast your bread until golden and firm.</h3>
+              <p>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth. .</p> 
             </div>
           </li>
 
