--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Toast your bread until golden and firm.</h3>
-              <p>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth. .</p> 
+              <p>Or to your preffered liking.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth.</h3>
+              <p>You can use either a butter knife or medium sized chef's knife to cut the avocado in half and to remove the pit. Next, use a spoon to scoop the contents from the skin and mash with a fork</p>
 
               <!--
 This block contains a photo and has a caption.
