--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Toast your bread until golden and firm.</h3>
-              <p>Or to your preffered liking.</p> 
+              <h3>Toast your bread until golden and firm</h3>
+              <p>Usually about 450 degrees Farenheight on a toaster oven for 3-4 minutes or to your preffered liking.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth.</h3>
-              <p>You can use either a butter knife or medium sized chef's knife to cut the avocado in half and to remove the pit. Next, use a spoon to scoop the contents from the skin and mash with a fork</p>
+              <h3>Preparing and spreading your avocado</h3>
+              <p>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth. Take a butter knife and spread onto toasted bread then season with salt and pepper.</p>
 
               <!--
 This block contains a photo and has a caption.
