--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Preparing and spreading your avocado</h3>
-              <p>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth. Take a butter knife and spread onto toasted bread then season with salt and pepper.</p>
+              <p>Cut your avocado in half, remove the pit, then scoop into a bowl and mash with a fork until smooth. Spread onto toasted bread then season with salt and pepper.</p>
 
               <!--
 This block contains a photo and has a caption.
