--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Toast your bread until golden and firm</h3>
-              <p>Usually about 450 degrees Farenheight on a toaster oven for 3-4 minutes or to your preffered liking.</p> 
+              <p>Usually about 450 degrees Farenheight on a toaster oven for 3-4 minutes or to your preferred liking.</p> 
             </div>
           </li>
 
