--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ Add your Things You'll Need.
               <li>Ripe avocado - 1/2 </li>
               <li>Salt and pepper</li>
               <li>Toaster and utensils</li>
-              <li>Optional: garlic, onion, tomatoes, etc.</li>
-              <li>Optional: red perpper flakes, balsamic dressing, etc.</li>
+              <li>Optional: vegetables or egg</li>
+              <li>Optional: seasonings or dressings</li>
             </ul>
           </aside>
         </div>
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Make it your own!</h3>
+              <p>Add any seasonings, fresh veggies or even an egg.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/xCR4iWurOQk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
