--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #B0CA87;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
