--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:#442220;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
