--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ Customise the visual style and appearance of your guide.
         top:0;
         left:-40px;
         z-index:-1;
-        background: #D3E3E8; 
+        background: #B0CA87; 
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
       }
