--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" >></a>
+              <a href="https://www.flickr.com/photos/26412869@N03/25740440350/in/photolist-FdAu8G-WHNpyA-u3jVaP-58oDVp-qcVJyr-qDzwG9-fpT7tC-UsQ7Lt-J41eAB-2iwVGWR-pgN1mz-7LLtui-p37Cby-CfqXV6-QyavY1-HFHvgV-suVoqF-dCQBS4-Jyzf3q-2a1Tn58-eSXJxp-2hps2oL-eFuetY-Z4DauD-ECiMry-nn2Nvc-s5t7XE-rQ3ewg-rVRVMU-eFo7Fz-pAGM73-eaNqyP-Bjm6ox-2hHuTm6-2kEwXcv-8nGiED-VvhFvi-2iSSGgt-XrzZ8z-kFxHyg-28XNbof-2hmiAHJ-cihUZd-Se8RiQ-2feEZgV-YHTWnc-zjjbiW-WShdi9-rMq5Mg-vbTWvG" title="Avocado Toast"><img src="https://live.staticflickr.com/1593/25740440350_9e02b4b963.jpg" width="500" height="333" alt="Avocado Toast"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
               <p class="caption">Basic avocado toast with flaked salt and freshly ground pepper.</p>
             </div>
           </li>
