--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@ with a paragraph to create a photo with a caption.
               <p>Snap a cute picture and upload to Instagram with a #nofilter. Share with friends and find what you like best. Enjoy!</p> 
             </div>
           </li>
+          
+           <!-- A new step -->
+          <li>
+            <div class="content">
+              <h3>Do the dishes.</h3>
+              <p>This is necessary to keep a happy and healthy lifestyle.</p> 
+            </div>
+          </li>
+
 
 
         </ol>
